[build-system]
requires = ["setuptools>=61.0,<76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtop"
version = "1.0.0"
description = "Advanced system monitor for Apple Silicon Macs with per-core CPU tracking"
readme = "README.md"
authors = [
    { name = "Filippo Vicidomini" }
]
requires-python = ">=3.8"
keywords = ["apple", "silicon", "m1", "m2", "m3", "m4", "mac", "monitor", "cpu", "gpu", "performance", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "dashing",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/filippovicidomini/vtop"
Repository = "https://github.com/filippovicidomini/vtop"

[project.scripts]
vtop = "vtop.vtop:main"

[tool.setuptools.packages.find]
where = ["."]
